2001-06-10  Ben Wing  <ben@xemacs.org>


	------ signal-code changes ------
	
	* data.c (init_data_very_early):
	* device-tty.c (init_device_tty):
	* emacs.c (fatal_error_signal):
	* emacs.c (memory_warning_signal):
	* floatfns.c (init_floatfns_very_early):
	* linuxplay.c (linux_play_data_or_file):
	* nas.c (*):
	* process-unix.c (unix_init_process):
	* process-unix.c (unix_create_process):
	* process-unix.c (unix_send_process):
	* process-unix.c (unix_deactivate_process):
	* signal.c (handle_signal_if_fatal):
	* signal.c (init_signals_very_early):
	* signal.c (init_interrupts_late):
	* sunplay.c (play_sound_file):
	* sunplay.c (play_sound_data):
	* sysdep.c (save_signal_handlers):
	* sysdep.c (restore_signal_handlers):
	* sysdep.c (setup_pty):
	* syssignal.h (EMACS_SIGNAL):
	use EMACS_SIGNAL everywhere instead of playing preprocessing
	games with signal().

	* s\windowsnt.h:
	* s\mingw32.h:
	* syssignal.h:
	Remove mswindows signal code from s+m headers and move to
	syssignal.h as one of the five ways of signal handling, instead of
	playing preprocessing games.

	* fileio.c:
	* sysdep.c (qxe_reliable_signal):
	Rename sys_do_signal to qxe_reliable_signal.
	
	* signal.c (set_timeout_signal):
	* process-unix.c (close_safely):
	* profile.c (Fstart_profiling):
	* profile.c (Fstop_profiling):
	* signal.c (init_async_timeouts):
	* signal.c (start_async_timeouts):
	Create set_timeout_signal(); use instead of just EMACS_SIGNAL to
	establish a signal handler on a timeout signal; this does special
	things under Cygwin.

	* nt.c (init_ntproc):
	Eliminate term_ntproc(), which is blank; used as a SIGABRT handler,
	which was wrong anyway.
	
	* nt.c:
	* win32.c:
	* win32.c (sigmask):
	* win32.c (mswindows_sigset):
	* win32.c (mswindows_sighold):
	* win32.c (mswindows_sigrelse):
	* win32.c (mswindows_raise):
	* win32.c (setitimer_helper_proc):
	* win32.c (syms_of_win32):
	Move signal code from nt.c to win32.c, since Cygwin needs it
	too when dealing with timeout signals.
